# Human-Traffic-Detector

./: CMakeLists.txt  README.md  config.xml  log.conf
include/: buffer.h  config.h  consumer.h  consumer_pool.h  operate.h  producer.h  producer_pool.h  structures.h  writer.h
src/: CMakeLists.txt  c_buffer.cpp  c_config.cpp  c_consumer.cpp  c_consumer_pool.cpp  c_operate.cpp  c_producer.cpp  c_producer_pool.cpp  c_writer.cpp  main.cpp
test/: CMakeLists.txt  t_buffer.cpp  t_config.cpp  testMain.cpp
